--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title id="title">Dr. Norman Borlaug</title>
   </head>
 
-  <body>
+  <body id="main">
     <main>
       <h1>Dr. Norman Borlaug</h1>
       <h2>The man who saved a billion lives</h2>
@@ -28,7 +28,7 @@
           on how to increase wheat yields - part of his life-long war on hunger.
         </figcaption>
       </figure>
-      <div id="main">
+      <div id="tribute-info">
         <h2 id="list-title">Here's a time line of Dr. Borlaug's life:</h2>
         <ul>
           <li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -114,7 +114,12 @@
         <h3>
           If you have time, you should read more about this incredible human
           being on his
-          <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry.</a>
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+            target="_blank"
+            >Wikipedia entry.</a
+          >
         </h3>
       </div>
     </main>
